--- a/templates/home.html
+++ b/templates/home.html
@@ -6,11 +6,12 @@
         <table class="display" id="stats_table">
             <thead>
                 <tr>
-                    <th width="15%" class="left">Latest update</th>
-                    <th width="23%" class="left">Test ID</th>
+                    <th width="19%" class="left">Latest update</th>
+                    <th width="25%" class="left">Test ID</th>
                     <th width="14%" class="left">Spec. name</th>
-                    <th width="10%" class="left">Build</th>
-                    <th width="13%" class="left">Status</th>
+                    <th width="14%" class="left">Cluster</th>
+                    <th width="14%" class="left">Build</th>
+                    <th width="14%" class="left">Status</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,6 +20,7 @@
                     <td class="left">{{ row.timestamp }}</td>
                     <td class="left"><a href='/details?id={{ row.test_id }}'>{{ row.test_id }}</a></td>
                     <td class="left">{{ row.spec }}</td>
+                    <td class="left">{{ row.ini }}</td>
                     <td class="left">{{ row.build }}</td>
                     <td class="left">{{ row.status }}</td>
                 </tr>
