Cluster in test details

--- a/templates/details.html
+++ b/templates/details.html
@@ -12,6 +12,7 @@
     <div id="tabs-1">
         <pre>build: <a href="http://builds.hq.northscale.net/latestbuilds/CHANGES_couchbase-server-{{ build }}.txt">{{ build }}</a></pre>
         <pre>specification: <a href="https://raw.github.com/couchbase/testrunner/master/conf/perf/{{ spec }}.conf">{{ spec }}</a></pre>
+        <pre>cluster: <a href="https://raw.github.com/couchbase/testrunner/master/resources/perf/{{ ini }}.ini">{{ ini }}</a></pre>
     </div>
     <div id="tabs-2">
         {% for phase in phases %}
