--- a/templates/details.html
+++ b/templates/details.html
@@ -36,7 +36,7 @@
     <div id="tabs-3">
         <p><strong>Add Link:</strong></p>
         <form name="report" method="POST" action="/report">{% csrf_token %}
-            <pre>Tag name: <input type="text" name="description" /> URL:<input type="text" name="url" /> <input type="submit" name="submit" value="Submit" /></pre>
+            <pre>Report name: <input type="text" name="description" /> URL:<input type="text" name="url" /> <input type="submit" name="submit" value="Submit" /></pre>
             <input type="hidden" name="test_id" value="{{ test_id }}">
         </form>
     </div>
