--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,7 +14,23 @@
             "sDom": 'R<"H"lfr>t<"F"ip<',
             "bAutoWidth": false,
             "iDisplayLength": 25,
-            "aaSorting": [[ 0, "desc" ]]
+            "aaSorting": [[ 0, "desc" ]],
+            "fnRowCallback": function(nRow, aData) {
+                if ( aData[5].indexOf('done') != -1 ) {
+                    if ( nRow.className === 'odd' ) {
+                        $('td', nRow).css('backgroundColor', '#C0D0B8');
+                    } else {
+                        $('td', nRow).css('backgroundColor', '#F2FBED');
+                    }
+                } else {
+                    if ( nRow.className === 'odd' ) {
+                        $('td', nRow).css('backgroundColor', '#FBE266');
+                    } else {
+                        $('td', nRow).css('backgroundColor', '#FBEEAC');
+                    }
+                }
+                return nRow;
+            }
         });
  
         $('#summary-table').css('visibility', 'visible');
