--- a/templates/home.html
+++ b/templates/home.html
@@ -6,23 +6,23 @@
         <table class="display" id="stats_table">
             <thead>
                 <tr>
-                    <th width="19%" class="left">Latest update</th>
-                    <th width="25%" class="left">Test ID</th>
-                    <th width="14%" class="left">Spec. name</th>
-                    <th width="14%" class="left">Cluster</th>
-                    <th width="14%" class="left">Build</th>
-                    <th width="14%" class="left">Status</th>
+                    <th width="19%">Latest update</th>
+                    <th width="25%">Test ID</th>
+                    <th width="14%">Spec. name</th>
+                    <th width="14%">Cluster</th>
+                    <th width="14%">Build</th>
+                    <th width="14%">Status</th>
                 </tr>
             </thead>
             <tbody>
                 {% for row in data %}
                 <tr>
-                    <td class="left">{{ row.timestamp }}</td>
-                    <td class="left"><a href='/details?id={{ row.test_id }}'>{{ row.test_id }}</a></td>
-                    <td class="left">{{ row.spec }}</td>
-                    <td class="left">{{ row.ini }}</td>
-                    <td class="left">{{ row.build }}</td>
-                    <td class="left">{{ row.status }}</td>
+                    <td>{{ row.timestamp }}</td>
+                    <td><a href='/details?id={{ row.test_id }}'>{{ row.test_id }}</a></td>
+                    <td>{{ row.spec }}</td>
+                    <td>{{ row.ini }}</td>
+                    <td>{{ row.build }}</td>
+                    <td>{{ row.status }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
