Left aligned table header

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,12 @@
         <table class="display" id="stats_table">
             <thead>
                 <tr>
-                    <th width="19%">Latest update</th>
-                    <th width="25%">Test ID</th>
-                    <th width="14%">Spec. name</th>
-                    <th width="14%">Cluster</th>
-                    <th width="14%">Build</th>
-                    <th width="14%">Status</th>
+                    <th class="left" width="19%">Latest update</th>
+                    <th class="left" width="25%">Test ID</th>
+                    <th class="left" width="14%">Spec. name</th>
+                    <th class="left" width="14%">Cluster</th>
+                    <th class="left" width="14%">Build</th>
+                    <th class="left" width="14%">Status</th>
                 </tr>
             </thead>
             <tbody>
